# URLite_Group7

./: .env  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Group7-works.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  package-lock.json
.claude/agents/: backend-developer.md
server/: .dockerignore  .env  Cargo.toml  Dockerfile  urls.db
server/migrations/: 001_create_users.sql  002_create_urls.sql  003_create_clicks.sql  004_add_indexes.sql
server/src/: error.rs  main.rs  models.rs
server/src/db/: analytics.rs  clicks.rs  mod.rs
server/src/middleware/: auth.rs
server/src/routes/: auth.rs  url.rs
